update  crossOrigin